@@ -1,0 +1,6 @@
+module Administrate
+  module Field
+    class DateTime < Base
+    end
+  end
+end
