@@ -9,3 +9,9 @@ Rails.application.config.assets.version = (ENV["ASSETS_VERSION"] || "1.0")
 # Precompile additional assets.
 # application.js, application.css, and all non-JS/CSS in app/assets folder are already added.
 # Rails.application.config.assets.precompile += %w( search.js )
+Rails.application.config.assets.precompile += %w(
+  bootstrap/glyphicons-halflings-regular.eot
+  bootstrap/glyphicons-halflings-regular.woff
+  bootstrap/glyphicons-halflings-regular.ttf
+  bootstrap/glyphicons-halflings-regular.svg
+)
