@@ -11,7 +11,7 @@
 #
 # It's strongly recommended that you check this file into your version control system.
 
-ActiveRecord::Schema.define(version: 20150417044505) do
+ActiveRecord::Schema.define(version: 20150903215027) do
 
   # These are extensions that must be enabled in order to support this database
   enable_extension "plpgsql"
@@ -60,6 +60,7 @@ ActiveRecord::Schema.define(version: 20150417044505) do
     t.string   "address_zip"
     t.datetime "created_at",       null: false
     t.datetime "updated_at",       null: false
+    t.datetime "shipped_at"
   end
 
   add_index "orders", ["customer_id"], name: "index_orders_on_customer_id", using: :btree
